fixed overflow in responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
 body{
   scroll-behavior: smooth;
   background-color: #FFF8F2;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 /* .new {
